repl for langs and treesitter

--- a/config.org
+++ b/config.org
@@ -112,12 +112,8 @@
 ** V Terminal
 
   #+begin_src elisp
-  (use-package vterm
-      :ensure t)
-  (setq shell-file-name "/bin/zsh" ;; this will be different for linux and mac machines
-      vterm-max-scrollback 5000)
-  ;;(setq shell-file-name "/bin/bash" ;; this will be different for linux and mac machines
-  ;;    vterm-max-scrollback 5000)
+  (setq shell-file-name "/bin/zsh") ;; this will be different for linux and mac machines
+  ;;(setq shell-file-name "/bin/bash") ;; this will be different for linux and mac machines
   #+end_src
 
 ** Git integration
@@ -191,7 +187,6 @@
     (lsp-mode . lsp-enable-which-key-integration)
     (go-mode . lsp-deferred)
     (js-mode . lsp-deferred)
-    (lua-mode . lsp-deferred)
     :commands (lsp lsp-deferred)
     :config
     (define-key lsp-mode-map (kbd "C-l C-l") lsp-command-map))
@@ -233,10 +228,12 @@
 - enable the global minor mode
 
   #+begin_src elisp
-    (use-package yasnippet :ensure t
-      :config
-      (setq yas-snippet-dirs '("~/.emacs.d/snips"))
-      (yas-global-mode 1))
+  (use-package yasnippet :ensure t
+    :config
+    (setq yas-snippet-dirs '("~/.emacs.d/snips"))
+    ;; preventing weird indenting 
+    (setq yas-indent-line 'fixed)
+    (yas-global-mode 1))
   #+end_src
 
 - Snippets are just files (no extension) 
@@ -316,7 +313,14 @@
 - some of the helpful commands and more involved instructions can be found on the [[https://emacs-lsp.github.io/lsp-mode/page/lsp-lua-language-server/][emacs-lsp]] website
 #+begin_src elisp
 (use-package lua-mode :ensure t)
+(general-define-key
+ :states '(visual)
+ :keymaps 'lua-mode-map
+ :prefix "SPC"
+ "r" '(lua-send-region :which-key "send region"))
 #+end_src
+- to get flycheck to work install luacheck
+  - ~luarocks install luacheck~
 *** GoLang
 
 - Getting go-mode installed
@@ -342,7 +346,30 @@
 #+end_src
 *** JS
 
-- everything is installed / initially configured in the lsp-mode note. I will need to add some keybindings as I go. 
+- using *js Repl* to get a repl experience 
+  #+begin_src elisp
+  (use-package nodejs-repl :ensure t)
+  (add-hook 'js-mode-hook
+          (lambda ()
+            (define-key js-mode-map (kbd "C-x C-e") 'nodejs-repl-send-last-expression)
+            (define-key js-mode-map (kbd "C-c C-j") 'nodejs-repl-send-line)
+            (define-key js-mode-map (kbd "C-c C-c") 'nodejs-repl-send-buffer)
+            (define-key js-mode-map (kbd "C-c C-l") 'nodejs-repl-load-file)
+            (define-key js-mode-map (kbd "C-c C-z") 'nodejs-repl-switch-to-repl)))
+(general-define-key
+ :states '(visual)
+ :keymaps 'js-mode-map
+ :prefix "SPC"
+ "r" '(nodejs-repl-send-region :which-key "send region"))
+  #+end_src
+- getting support for svelte, web mode will not work with lsp mode 
+  #+begin_src elisp
+  (use-package svelte-mode
+    :ensure t
+    :config (add-hook 'svelte-mode-hook #'lsp-deferred))
+  (use-package web-mode :ensure t)
+  (add-to-list 'auto-mode-alist '("\\.html?\\'" . web-mode))
+  #+end_src
 *** Java
 #+begin_src elisp
 (use-package lsp-java :ensure t :config (add-hook 'java-mode-hook #'lsp-deferred))
@@ -375,6 +402,11 @@
  :keymaps 'racket-mode-map
  :prefix "SPC"
  "\\" '(racket-insert-lambda :which-key "insert lambda"))
+(general-define-key
+ :states '(visual)
+ :keymaps 'racket-mode-map
+ :prefix "SPC"
+ "r" '(racket-send-region :which-key "insert lambda"))
 #+end_src
 - key bindings
   | binding | function              |
@@ -395,19 +427,22 @@
  :states '(visual)
  :keymaps 'cider-mode-map
  :prefix "SPC"
- "r" '(cider-eval-region :which-key "insert lambda"))
+ "r" '(cider-eval-region :which-key "send region"))
 ;;(setq cider-lein-parameters "repl :headless :host localhost")
 #+end_src
 **** smart parens
 #+begin_src elisp
 (use-package smartparens :ensure t)
 (require 'smartparens-config)
+(sp-pair "\<" nil :actions :rem)
 (add-hook 'racket-mode-hook #'smartparens-mode)
 (add-hook 'clojure-mode-hook #'smartparens-mode)
 (add-hook 'scheme-mode-hook #'smartparens-mode)
 (add-hook 'rustic-mode-hook #'smartparens-mode)
+(add-hook 'lua-mode-hook #'smartparens-mode)
 (add-hook 'lisp-interaction-mode-hook #'smartparens-mode)
 (add-hook 'emacs-lisp-mode-hook #'smartparens-mode)
+;;(add-hook 'svelte-mode-hook #'smartparens-mode)
 (general-define-key
    :states '(normal)
    :keymaps 'smartparens-mode-map
@@ -553,6 +588,23 @@
 (sml/setup)
 #+end_src
 
+*** Tabline
+#+begin_src elisp
+(setq tab-line-new-button-show nil)  
+(setq tab-line-close-button-show nil)  
+#+end_src
+*** TreeSitter
+#+begin_src elisp
+(use-package tree-sitter :ensure t)
+(use-package tree-sitter-langs :ensure t)
+(require 'tree-sitter)
+(require 'tree-sitter-hl)
+(require 'tree-sitter-langs)
+(require 'tree-sitter-debug)
+(require 'tree-sitter-query)
+(global-tree-sitter-mode)
+(add-hook 'tree-sitter-after-on-hook #'tree-sitter-hl-mode)
+#+end_src
 *** Font's
 
 - *Font* setup, I am a fan of firacode. It is the best because of how it renders 0's and && symbols (it's not opinion but fact :) )
@@ -632,14 +684,13 @@
     "c C"   '(recompile :which-key "Recompile")
     "h r r" '((lambda () (interactive) (load-file "~/.emacs.d/init.el")) :which-key "Reload emacs config")
     "t t"   '(toggle-truncate-lines :which-key "Toggle truncate lines")
+    "t l"   '(tab-line-mode :which-key "tab line mode")
     ;; File manipulation
     "."     '(find-file :which-key "Find file")
     "f s"   '(save-buffer :which-key "Save file")
     "f C"   '(copy-file :which-key "Copy file")
     "f D"   '(delete-file :which-key "Delete file")
     "f R"   '(rename-file :which-key "Rename file")
-    ;; Vterm
-    "v v"   '(vterm-other-window :which-key "Open Vterm")
     "k k"   '(kill-buffer-and-window :which-key "kill and klose")
     "c h"   '(cheat-sh :which-key "open cheat sheet lookup"))
   #+end_src
